支持jdk17版本和版本依赖梳理